# kohi-engine

./: .gitignore  CMakeLists.txt  README.md
docs/: config
engine/: CMakeLists.txt
engine/inc/core/: asserts.h  defines.h  logger.h
engine/inc/platform/: platform.h
engine/src/core/: logger.c
engine/src/platform/: platform_msw.c  platform_xorg.c
test/: CMakeLists.txt
test/src/: main.c
